Fix app-about width on firefox

--- a/src/app/deck-list/deck-list.component.scss
+++ b/src/app/deck-list/deck-list.component.scss
@@ -45,5 +45,5 @@ main {
 }
 
 app-about {
-  width: 100%;
+  width: 100% !important;
 }
